src/objects/PANG_Data_Asset_Load__c.object
<CustomObject>
    <description>Used to record 1 to n number of RWE Data Asset load attempts</description>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <label>Data Asset</label>
        <referenceTo>PANG_Data_Asset__c</referenceTo>
        <relationshipLabel>Data Asset Loads</relationshipLabel>
        <relationshipName>RWE_Data_Asset_Loads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Storage_Location__c</fullName>
        <label>Data Storage Location</label>
        <picklist>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netezza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_Loaded__c</fullName>
        <label>Date and Time Loaded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Load_Complications__c</fullName>
        <label>Load Complications</label>
        <picklist>
            <picklistValues>
                <fullName>File Corrupt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Format Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Does Not Match Dictionary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Load_Successful__c</fullName>
        <label>Load Successful</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Data_Asset_Loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RWE Data Asset Load</label>
    <nameField>
        <displayFormat>RWE-DAL-{000000000}</displayFormat>
        <label>RWE Data Asset Load ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Data Asset Loads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>